name:                ublatt
version:             0.1.0.0
license:             MIT
author:              Martin Ring
maintainer:          martin.ring@dfki.de
category:            Web
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable ublatt
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Model
  build-depends:       base >=4.10 && <4.11,
                       containers,
                       text, bytestring,
                       yaml, aeson,
                       blaze-html, blaze-markup,
                       pandoc, pandoc-types,
                       process,
                       optparse-applicative
  default-language:    Haskell2010